Fri May 18 09:16:14 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tcl8/smoketest.tcl: Update tcl smoketest.tcl to require version
	  1.0.0 - it previously required 0.9.6, bug TCLs "package require"
	  command doesn't accept differing major numbers, even if -exact
	  isn't specified.
	* tcl8/Makefile.am: Add dependency on ../config.status to
	  pkgIndex.tcl, so that it gets updated when the version number
	  changes.

Thu May 17 22:27:08 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Final update before release.

Thu May 17 22:10:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/docs/bindings.html: Document iterators, and iterator
	  properties, which have a problem with the lazy evaluation if the
	  iterator has moved before the evaluation happens.  Add a title to
	  the table of equivalents to the old Sequence API.

Thu May 17 21:51:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Update the Python entries.

Thu May 17 19:52:05 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Sort out the easier Python entries, since Richard seems to
	  have fallen off the net.

Thu May 17 19:11:38 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Bump version to 1.0.0.

Thu May 17 17:28:35 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu May 17 17:25:39 BST 2007  Olly Betts <olly@survex.com>

	* ruby/docs/bindings.html: Remove "beta quality" warning - the Ruby
	  bindings seem as solid as the others and no problems have been
	  reported.
	* ruby/docs/bindings.html: Add section on Unicode support.

Thu May 17 17:25:06 BST 2007  Olly Betts <olly@survex.com>

	* php/docs/bindings.html: Tweak the linked text.

Thu May 17 16:41:19 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Minor fixes from Jenny's proofreading.

Thu May 17 15:49:14 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Updated for 1.0.0 except for the Python changes.

Thu May 17 15:48:16 BST 2007  Olly Betts <olly@survex.com>
