@@ -8,7 +8,7 @@ TESTS_ENVIRONMENT = \
 ## Test programs to be run
 TESTS = smoketest.tcl
 
-EXTRA_DIST = except.i util.i $(TESTS) $(BUILT_SOURCES) run-tcl-test runtest.tcl
+EXTRA_DIST = except.i util.i $(TESTS) $(BUILT_SOURCES) run-tcl-test runtest.tcl pkgIndex.tcl.in
 SUBDIRS = docs
 
 tcllibdir = @TCL_LIB@/../xapian@VERSION@
@@ -29,9 +29,7 @@ nodist_xapian_la_SOURCES = xapian_wrap.cc
 xapian_la_LIBADD = $(XAPIAN_LIBS)
 
 BUILT_SOURCES = xapian_wrap.cc
-
-pkgIndex.tcl: Makefile.am ../config.status
-	echo 'package ifneeded xapian @VERSION_NO_SNAPSHOT@ [list load [file join $$dir xapian[info sharedlibextension]]]' > pkgIndex.tcl
+CLEANFILES = pkgIndex.tcl
 
 if MAINTAINER_MODE
 xapian_wrap.cc: $(SWIG_sources) except.i util.i
@@ -39,8 +37,7 @@ xapian_wrap.cc: $(SWIG_sources) except.i util.i
 	    -tcl8 -namespace -pkgversion @VERSION_NO_SNAPSHOT@ \
 	    -o xapian_wrap.cc $(SWIG_mainsource)
 
-CLEANFILES = $(BUILT_SOURCES) pkgIndex.tcl
+CLEANFILES += $(BUILT_SOURCES)
 else
 MAINTAINERCLEANFILES = $(BUILT_SOURCES)
-CLEANFILES = pkgIndex.tcl
 endif
